<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@drawable/menupage_background" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent" 
  android:orientation="vertical">
    <LinearLayout android:orientation="horizontal" android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/layoutSahanaIncidentReport">
        <ImageView android:src="@drawable/menupage_icon_incident" android:id="@+id/imgIncident" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_width="0dp" android:layout_weight="1"></ImageView>
        <TextView android:textSize="20dp" android:layout_width="0dp" android:layout_weight="1" android:gravity="left" android:typeface="serif" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:id="@+id/textSahanaIncidentReport" android:text="@string/menu_page_sahana_incident_report_title"></TextView>
    </LinearLayout>
    <LinearLayout 
    	android:layout_width="fill_parent" 
    	android:layout_height="0dp" 
    	android:layout_weight="1" 
    	android:id="@+id/layoutSahanaTaskDispatch">
        <ImageView 
        	android:src="@drawable/menupage_icon_task" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/imgTask" 
        	android:layout_gravity="center_vertical" 
        	android:layout_width="0dp" 
        	android:layout_weight="1">
        </ImageView>
        <TextView 
        	android:layout_height="wrap_content" 
        	android:layout_width="0dp" 
        	android:layout_weight="1" 
        	android:id="@+id/textSahanaTaskDispatch" 
        	android:text="@string/menu_page_sahana_task_dispatch_title" 
        	android:gravity="left" 
        	android:layout_gravity="center_vertical"
        	android:textSize="20dp"
        	android:typeface="serif">
        </TextView>
    </LinearLayout>
    <LinearLayout 
    	android:layout_width="fill_parent" 
    	android:layout_height="0dp" 
    	android:layout_weight="1" 
    	android:id="@+id/layoutSahanaTeamCommunication">
        <ImageView 
        	android:src="@drawable/menupage_icon_team" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/imgTeam" 
        	android:layout_gravity="center_vertical" 
        	android:layout_width="0dp" 
        	android:layout_weight="1">
        </ImageView>
        <TextView 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center_vertical" 
        	android:layout_width="0dp" 
        	android:layout_weight="1" 
        	android:id="@+id/textSahanaTeamCommunication" 
        	android:text="@string/menu_page_sahana_team_communication_title" 
        	android:gravity="left"
        	android:textSize="20dp" 
        	android:typeface="serif">
        </TextView>
    </LinearLayout>
</LinearLayout>
